Fix tooltip clipping in CombinedAnnotatedTable by allowing overflow and adding padding.

--- a/src/app/components/CombinedAnnotatedTable.module.css
+++ b/src/app/components/CombinedAnnotatedTable.module.css
@@ -7,10 +7,11 @@
 }
 
 .tableWrapper {
-	overflow-x: auto;
+	overflow: visible;
 	width: 100%;
 	display: flex;
 	justify-content: center;
+	padding-bottom: 100px;
 }
 
 .table {
